<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>yaml-cpp</name>
  <description>yaml-cpp</description>
  <version>0.0.1</version>
  <maintainer email="paulfurgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>message_runtime</run_depend>
</package>